Day 36/100 commits - Add plans DTOS
